# cs-space-mission

./: .gitattributes  .gitignore  LICENSE  README.md  duties.py  pyproject.toml
config/: flake8.ini
mars_entry_descent_landing/: edl.py  mars-edl-ranges.ipynb  mars_edl_2nd_encoding-with-gap.ipynb  mars_edl_2nd_encoding.ipynb  mars_edl_3rd_encoding.ipynb
performance_benchmarking/: README.md  nav-geometric-construction.pgf  nav-linear-construction.pgf  nav_geometric_construction_figure.ipynb  nav_geometric_contract_simplified.ipynb  nav_geometric_iterations.ipynb  nav_geometric_scenario_bounds.ipynb  nav_geometric_scenario_results.ipynb  nav_geometric_state.pkl  nav_linear_construction_figure.ipynb  nav_linear_state.pkl  nav_projection.py  utils.py
space_mission/: README.md  analysis_results.ipynb  analysis_results1-20steps.ipynb  analysis_results1-5steps.ipynb  analysis_results2.ipynb  contract_utils.py  cpu_usage_plot.py  dsn.ipynb  dsn.py  generators.py  hyper_requirements.py  hyper_scenarios.py  nav-geometric-construction.pgf  nav-linear-construction.pgf  nav.ipynb  nav_geometric.ipynb  nav_geometric_construction_figure.ipynb  nav_geometric_continue.ipynb  nav_geometric_contract_simplified.ipynb  nav_geometric_iterations.ipynb  nav_geometric_state.pkl  nav_linear.ipynb  nav_linear_construction_figure.ipynb  nav_projection.py  plot_utils.py  power-range.ipynb  power.ipynb  scenario_generation_20steps.ipynb  scenario_generation_5steps.ipynb  schedulability.py  schedulability_analysis_20steps.ipynb  schedulability_analysis_5steps.ipynb  space_mission.ipynb  test.ipynb  (+6 more)
(+21 files in other folders)
